macOS Share menu icons are missing
Categories
(Core :: Widget: Cocoa, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox75 | --- | wontfix |
| firefox76 | --- | wontfix |
| firefox77 | --- | verified |
| firefox78 | --- | verified |
People
(Reporter: chuck, Assigned: spohl.mozilla.bugs)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
84.44 KB,
image/png
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
On 77 Nightly, most of the sharing icons in the macOS are not displaying for me. This creates visual imbalance, and also makes it challenging to scan the list and find which option you're looking to choose.
| Reporter | ||
Comment 1•6 years ago
|
||
I likely got the component for this wrong, but it's not entirely clear where it belongs. ni?dolske to help find the right home.
Updated•6 years ago
|
Comment 2•6 years ago
|
||
Oh sorry I misread that as the App buttons...
Moving this to General for now since it has no house...
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
13:19.76 INFO: Narrowed integration regression window from [18f3d786, 3e22c91c] (3 builds) to [88737086, 3e22c91c] (2 builds) (~1 steps left)
13:19.76 INFO: No more integration revisions, bisection finished.
13:19.76 INFO: Last good revision: 88737086fe42e08a37bda13eb040a3e770017987
13:19.76 INFO: First bad revision: 3e22c91c3b04f6f4d6e0d172c890b02ee59f2eac
13:19.76 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=88737086fe42e08a37bda13eb040a3e770017987&tochange=3e22c91c3b04f6f4d6e0d172c890b02ee59f2eac
| Assignee | ||
Comment 4•6 years ago
|
||
The console logs the following error for the icons that don't draw properly:
CGImageDestinationFinalize failed for output type 'public.tiff'
I have a patch that fixes this and (I believe) also maintains the improvements that were intended in bug 1561756, where this issue was introduced. I'll have :mstange look this over on Phabricator.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 5•6 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 7•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Stephen, this is marked as P1 affecting 77, would it be a safe uplift to beta? Thanks
| Assignee | ||
Comment 9•6 years ago
|
||
Comment on attachment 9142240 [details]
Bug 1629533: Fix an issue that prevented some icons from drawing in the macOS share menu. r=mstange
Beta/Release Uplift Approval Request
- User impact if declined: Some icons in the macOS share menu would not be shown.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: On the right side of the URL bar, click on the three dots and then "Share". An icon for every menu entry should be shown.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This change is isolated to a single function that converts an NSImage to a Base64 representation which is only used by the share menu in question. This code is not shared elsewhere.
- String changes made/needed: none
| Assignee | ||
Updated•6 years ago
|
Comment on attachment 9142240 [details]
Bug 1629533: Fix an issue that prevented some icons from drawing in the macOS share menu. r=mstange
Low risk fix for a visible macos regression, uplift approved for 77 beta 2, thanks.
Comment 11•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Comment 12•6 years ago
|
||
I've managed to reproduce this issue using Firefox 77.0a1 (BuildId:20200413225327) on macOS 10.14.5
This issue is verified fixed using Firefox 78.0a1 (BuildId:20200505213825) and Firefox 77.0b2 (BuildId:20200505174119).
Description
•