Bug 1629533: Fix an issue that prevented some icons from drawing in the macOS share menu. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D71871